LazyLoadingInitializationException with MySQL

--- a/src/main/resources/templates/create_user_email.html
+++ b/src/main/resources/templates/create_user_email.html
@@ -44,7 +44,7 @@
     <tbody>
       <tr>
         <td align="center" style="padding: 1rem 2rem; vertical-align: top; width: 100%;">
-          <table role="presentation" style="max-width: 600px; border-collapse: collapse; border: 0px; border-spacing: 0px; text-align: left;">
+          <table role="presentation" style="width: 97%; border-collapse: collapse; border: 0px; border-spacing: 0px; text-align: left;">
             <tbody>
               <tr>
                 <td style="padding: 40px 0px 0px;">
