--- a/src/main/resources/templates/update_user_email.html
+++ b/src/main/resources/templates/update_user_email.html
@@ -18,7 +18,7 @@
             <tbody>
               <tr>
                 <td style="padding: 40px 0px 0px;">
-                  <<div style="padding-bottom: 20px;">
+                  <div style="padding-bottom: 20px;">
                     <img th:src="${logoUrl}" th:alt="${companyName}" style="width: 56px;">
                   </div>
                   <div style="padding: 20px; background-color: rgb(255, 255, 255);">
